add updateTikaMetaset flag for ReindexRequest
see: #364